# AbyssEngine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE.md  README.md  report.json
_work/: arm_resource_6801_audit.txt
_work/externresearch/: absent.txt  extra.txt  extra2.txt  extra_chunk_aa  extra_chunk_ab  extra_chunk_ac  extra_chunk_ad  extra_chunk_ae  extra_chunk_af  orig_symbols.txt
_work/symbols/: android_2.0.16.symbols.tsv  android_thumb_map.tsv
cmake/: DownloadNDK.cmake  orbstack-ndk-arm.toolchain.cmake  toolchain.cmake
docs/: AEM_AEI_NATIVE_LOADER_SPEC.md  DECOMP_NOTES.md  DEEPOPEN_J2ME_CROSSWALK_2026-07-20.md  HUD_CORE_FRAME_2026-07-20.md  IDENTICALITY.md  MGAME_ARM_MATCH_2026-07-20.md  MGAME_HUD_ACTION_ROUTING_2026-07-20.md  MGAME_PAUSED_TOUCH_ROUTING_2026-07-20.md  PROJECT_STATUS.md  RECOVERY_EVIDENCE_GUIDE_RU.md  RELINK.md  VALIDATION.md
src/engine/audio/: AESound.cpp  AESound.h  AESoundInfo.h  AESoundInterface.h  AESoundRessource.cpp  AESoundRessource.h  FModSound.cpp  FModSound.h
src/engine/core/: AERandom.cpp  AERandom.h  AEString.h  AbyssEngine.cpp  AbyssEngine.h  ApplicationManager.cpp  ApplicationManager.h  Array.cpp  Array.h  ArrayInstantiations.cpp  EngineFlags.cpp  GameData.cpp  GameData.h  GameText.cpp  GameText.h  IApplicationModule.cpp  IApplicationModule.h  JNIEnvCalls.cpp  JNIEnvCalls.h  KeyCode.cpp  KeyCode.h  KeyFrame.cpp  KeyFrame.h  NFC.cpp  NFC.h  Node.cpp  Node.h
src/engine/file/: AEFile.cpp  AEFile.h  AELowLevelFile.h  AELowLevelHeldFile.h  AENormalFile.cpp  AENormalFile.h  AEPakFile.cpp  AEPakFile.h  AEPakFileEntry.h  BlowfishSubkeyFile.cpp  ConfigReader.cpp  ConfigReader.h  FileInterface.h  FileInterfaceAndroid.cpp  FileInterfaceAndroid.h  FileRead.cpp  FileRead.h  TokenStruct.h
src/engine/input/: VirtualInput.cpp  VirtualInput.h
src/engine/math/: AEMath.cpp  AEMath.h  BSphere.cpp  BSphere.h  BoundingAAB.cpp  BoundingAAB.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolume.cpp  BoundingVolume.h  EaseInOut.cpp  EaseInOut.h  EaseInOutMatrix.cpp  EaseInOutMatrix.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h
src/engine/render/: AEGeomCanvas.h  AEGeometry.cpp  AEGeometry.h  AELoadedTexture.h  AMeshMerger.cpp  AMeshMerger.h  BuildResourceList.cpp  Camera.cpp  Camera.h  Curve.h  DeviceInfo.h  Engine.cpp  Engine.h  FBOContainer.cpp  FBOContainer.h  GLES1Compat.cpp  IParticleSystem.cpp  IParticleSystem.h  Image.h  Image2D.h  ImageFactory.cpp  ImageFactory.h  ImageFont.h  ImagePart.cpp  ImagePart.h  LODManager.cpp  LODManager.h  LensFlare.cpp  LensFlare.h  LightColor.h  LodMeshMerger.cpp  LodMeshMerger.h  LowResourceTable.cpp  MarqueeImage.cpp  MarqueeImage.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshMerger.cpp  (+37 more)
src/game/: ItemSort.h
src/game/core/: AutoPilotList.cpp  AutoPilotList.h  BumpRimCubeShader_new.cpp  BumpRimCubeShader_new.h  BumpShaderCloak.cpp  BumpShaderCloak.h  BumpShaderParticle.cpp  BumpShaderParticle.h  BumpShaderRefract.cpp  BumpShaderRefract.h  BumpShaderV2.cpp  BumpShaderV2.h  BumpShaderV3.cpp  BumpShaderV3.h  BumpShaderV4.cpp  BumpShaderV4.h  CheatCode.cpp  CheatCode.h  CheatHandler.cpp  CheatHandler.h  CutScene.cpp  CutScene.h  GameSettings.h  Globals.cpp  Globals.h  HangarList.cpp  HangarList.h  Matrix.cpp  Matrix.h  Radio.cpp  Radio.h  RadioMessage.cpp  RadioMessage.h  String.cpp  String.h  TextureConference.cpp  TextureConference.h  Vector.cpp  Vector.h
src/game/menu/: HackingGame.cpp  HackingGame.h  MGame.cpp  MGame.h  MTitle.cpp  MTitle.h  MiningGame.cpp  MiningGame.h  MiningHostObject.h  ModMainMenu.cpp  ModMainMenu.h  ModStation.cpp  ModStation.h  SpaceLounge.cpp  SpaceLounge.h
tools/: DRIFT_RULES.md  SWEEP_RULES.md  UNION_RULES.md  _fwddecl.py  _split_headers.py  arm_audit_resource_6801.py  build.sh  classmap.json  dedup_externs.py  dedup_helpers.py  dispatch_worklist.py  drift_scan.py  dump_asm.py  fieldmap.json  finish_methods.py  gen_wave_workflow.py  goal_lint.py  goal_lint_baseline.json  layout.py  lint_hacks.py  master_step.sh  method_registry.json  methodize_apply.py  methodize_scan.py  offdrift.py  reconcile.py  rename_bare_defs.py  rename_fields.py  rename_map.json  rewrite_body.py  scandrift.py  scope_filter.py  sodiff.py  strip_canary.py  strip_externs.py  structdiff.py  symdiff.py  wave_prepare.py  wave_workflow.js  wrongtype_worklist.py
tools/verify/: asmdiff.py  build_objs.sh  delink.py  elf.py  match_flags.sh  orbas  orbcc  orbnm  orbobjdump  prepare_work_from_so.py  relink.py  run_ab.sh  setup.sh  verify.py
(+229 files in other folders)
